[metadata]
name = deb-pkg-tools
author = Peter Odding
author_email = peter@peterodding.com
description = Debian packaging tools
long_description = file: README.rst
url = https://deb-pkg-tools.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities

[options]
packages = find:

[options.entry_points]
console_scripts = deb-pkg-tools = deb_pkg_tools.cli:main

[options.extras_require]
memcached = python-memcached >= 1.58

# Enable building of universal wheels so we can publish wheel
# distribution archives to PyPI (the Python package index)
# that are compatible with Python 2 as well as Python 3.

[wheel]
universal=1
